--- a/templates/setting.html
+++ b/templates/setting.html
@@ -13,118 +13,79 @@
     </head>
     <body>
         <div class="user_frame">
-            <div class="top_frame">
+            <div class="top_frame"></div>
             <a class="main_page" id="main_page" href="#">首頁</a>
                 <span class="setting_title">設定</span>
+                    <div class="profile-frame">
+                        <div class="self-photo">
+                            {% if current_user.ProfilePicture %}
+                                <img src="{{ url_for('uploaded_file', filename=current_user.ProfilePicture) }}" alt="Profile Picture">
+                            {% else %}
+                                <img id="image" src="{{ url_for('static', filename='下載.jpg') }}" alt="Default Profile Picture">
+                            {% endif %}</div><a href="#">
+                        <div class="edit" id="edit">
+                            <div class="name"></div>
+                        </div></a>
+                <span class="self-name" id="username">{{ current_user.username }}</span>
             </div>
-    <div class="profile-frame">
-        <!-- 頭像框 -->
-        <div class="self-photo">
-            {% if current_user.ProfilePicture %}
-                <img src="{{ url_for('uploaded_file', filename=current_user.ProfilePicture) }}" alt="Profile Picture">
-            {% else %}
-                <img id="image" src="{{ url_for('static', filename='下載.jpg') }}" alt="Default Profile Picture">
-            {% endif %}
-            <!-- 編輯按鈕 -->
-            <a href="#">
-                <div class="edit" id="edit">
-                    <img src="{{ url_for('static', filename='image/edit-icon.png') }}" alt="Edit Icon">
-                </div>
-            </a>
-        </div>
-    
-        <!-- 用戶名和電子郵件 -->
-        <span class="self-name" id="username">{{ current_user.username }}</span>
-        <span class="self-email">{{ current_user.email }}</span>
-    </div>
-    
-    
-        
-        
 
-            <div class="container">
+             <div class="container">
                 <nav class="sidebar">
                     <div class="folding-menu">
                         <ul>
-                            <!-- 主菜單項目：帳號 -->
-                            <li class="acc">
-                                <a href="#">
-                                    <img src="{{ url_for('static', filename='image/account-icon.png') }}" alt="Account Icon">
-                                    帳號
-                                    <span class="arrow">▼</span>
-                                </a>
-                                <ul class="acc-options">
-                                    <li><a href="#" class="circle copy-button">帳號 : {{ current_user.email }}<span id="email"></span></a></li>
-                                    <li><a href="#" class="circle copy-button" id="password-change">更改密碼</a></li>
-                                </ul>
-                            </li>
-            
-                            <!-- 主菜單項目：通知 -->
-                            <li class="notification">
-                                <a href="#">
-                                    <img src="{{ url_for('static', filename='image/notification-icon.png') }}" alt="Notification Icon">
-                                    通知
-                                    <span class="arrow">▼</span>
-                                </a>
-                                <ul class="notification-options">
-                                    <li class="toggle-option">
-                                        <span class="circle copy-button">選項名稱</span>
-                                        <label class="switch">
-                                            <input type="checkbox">
-                                            <span class="slider round"></span>
-                                        </label>
-                                    </li>
-                                </ul>
-                            </li>
-            
-                            <!-- 主菜單項目：好友列表 -->
-                            <li class="friend-list">
-                                <a href="#" id="friend-list">
-                                    <img src="{{ url_for('static', filename='image/friends-icon.png') }}" alt="Friends Icon">
-                                    好友列表
-                                    <span class="arrow">▼</span>
-                                </a>
-                            </li>
-            
-                            <!-- 主菜單項目：隱私 & 安全 -->
-                            <li class="safety">
-                                <a href="javascript:void(0)">
-                                    <img src="{{ url_for('static', filename='image/security-icon.png') }}" alt="Privacy Icon">
-                                    隱私 & 安全
-                                    <span class="arrow">▼</span>
-                                </a>
-                            </li>
-            
-                            <!-- 主菜單項目：邀請 -->
-                            <li class="invite">
-                                <a href="#">
-                                    <img src="{{ url_for('static', filename='image/invite-icon.png') }}" alt="Invite Icon">
-                                    邀請
-                                    <span class="arrow">▼</span>
-                                </a>
-                                <ul class="invite-options">
-                                    <li><a href="javascript:void(0)" class="circle copy-button" id="copyButton" onclick="copyInviteLink()">複製連結</a></li>
-                                    <li><a href="javascript:void(0)" class="circle copy-button" id="shareButton" onclick="showSharePopup()">分享</a></li>
-                                </ul>
-                            </li>
-            
-                            <!-- 主菜單項目：語言 -->
-                            <li class="language">
-                                <a href="javascript:void(0)">
-                                    <img src="{{ url_for('static', filename='image/language-icon.png') }}" alt="Language Icon">
-                                    語言
-                                    <span class="arrow">▼</span>
-                                </a>
-                            </li>
+                          <li class="acc"><a href="#"><i class="icon-account"></i>帳號<span class="arrow">▼</span></a>
+                            <ul class="acc-options">
+                                <li><a class="circle">帳號 : {{ current_user.email }}<span id="email"></span></a></li>
+                                <li><a href="#" class="circle" id="password-change">更改密碼</a></li>
+                            </ul>
+                          </li>
+
+                          <li class="notification"><a href="#"><i class="icon-notification"></i> 通知<span class="arrow">▼</span></a>
+                            <ul class="notification-options">
+                                <li class="toggle-option">
+                                    <span class="circle">選項名稱</span>
+                                    <label class="switch">
+                                        <input type="checkbox">
+                                        <span class="slider round"></span>
+                                    </label>
+                                </li>
+                            </ul>
+                          </li>
+
+                          <li class="friend-list"><a href="#" id="friend-list"><i class="icon-friends"></i>好友列表<span class="arrow">▼</span></a>
+                          </li>
+
+                          <li class="safety"><a href="javascript:void(0)"><i class="icon-privacy"></i>隱私 & 安全<span class="arrow">▼</span></a></li>
+
+                          <li class="invite"><a href="#"><i class="icon-invite"></i>邀請<span class="arrow">▼</span></a>
+                            <ul class="invite-options">
+                                <li><a href="javascript:void(0)" class="circle" id="copyButton" onclick="copyInviteLink()">複製連結</a></li>
+                                <li><a href="javascript:void(0)" class="circle" id="shareButton" onclick="showSharePopup()">分享</a></li>
+                            </ul>
+                              <div id="sharePopup" class="share-popup" style="display:none;">
+                                <div class="share-content">
+                                    <h3>在貼文中分享</h3>
+                                    <div id="shareMessage"></div>
+                                    <div class="share-icons">
+                                        <button onclick="share('whatsapp')"><img src="/static/image/whatsapp-icon.png" alt="WhatsApp" style="width: 25px; height: 25px; object-fit: cover;"></button>
+                                        <button onclick="share('facebook')"><img src="/static/image/facebook.png" alt="Facebook" style="width: 25px; height: 25px; object-fit: cover;"></button>
+                                        <button onclick="share('x')"><img src="/static/image/x.jpg" alt="X" style="width: 25px; height: 25px; object-fit: cover;"></button>
+                                        <button onclick="share('email')"><img src="/static/image/email.jpg" alt="透過電子郵件分享" style="width: 25px; height: 25px; object-fit: cover;"></button>
+                                        <button onclick="share('kakaotalk')"><img src="/static/image/Kakao.png" alt="KakaoTalk" style="width: 25px; height: 25px; object-fit: cover;"></button>
+                                        <a onclick="closeSharePopup()"  href="javascript:void(0)">關閉</a>
+                                    </div>
+
+                                </div>
+                              </div>
+                          </li>
+
+                          <li class="language"><a href="javascript:void(0)"><i class="icon-language"></i>語言<span class="arrow">▼</span></a></li>
                         </ul>
                     </div>
                 </nav>
-                <img src="{{ url_for('static', filename='image/11.png') }}" alt="Left Image" class="corner_image left_image">
-    <img src="{{ url_for('static', filename='image/18.png') }}" alt="Right Image" class="corner_image right_image">
-            </div>
-
-            
-            
+             </div>
+            <div class="name"></div>
+        </div>
 
     <script>
         var main_page = document.getElementById("main_page");
